<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".createteam">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="675dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/include"
        app:layout_constraintVertical_bias="1.0">

        <EditText
            android:layout_marginTop="10dp"
            android:id="@+id/etxtTeamName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/editTeamName"
            android:textAlignment="center"
            android:textSize="40px"/>

        <EditText
            android:id="@+id/etxtTeamRoster"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/editTeamRoster"
            android:textAlignment="center"
            android:textSize="40px"/>

        <EditText
            android:id="@+id/etxtTeamStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/editTeamStyle"
            android:textAlignment="center"
            android:textSize="40px"/>

        <TextView
            android:id="@+id/txtvValoracion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="AQUI VA LA VALORACION DEL EQUIPO"
            android:textAlignment="center"/>

        <ListView
            android:id="@+id/lveCreateTeam"
            android:layout_width="match_parent"
            android:layout_height="200dp" />

        <EditText
            android:id="@+id/etxtPlayerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/editPlayerName"
            />

        <EditText
            android:id="@+id/editTextTextPersonName6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/editPlayerPosition"  />

        <EditText
            android:id="@+id/editTextTextPersonName7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/editPlayerCost"  />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextTextPersonName12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:hint="@string/editMovement"
                android:textAlignment="center"/>

            <EditText
                android:id="@+id/editTextTextPersonName11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:hint="@string/editStrength"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/editTextTextPersonName10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:hint="@string/editAgility"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/editTextTextPersonName9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:hint="@string/editPass"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/editTextTextPersonName8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:hint="@string/editArmour"
                android:textAlignment="center" />
        </LinearLayout>

        <EditText
            android:id="@+id/editTextTextPersonName13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/editPlayerAbilities"
            android:textAlignment="center"/>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btnSave"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="15dp"
                android:backgroundTint="@color/BBBlue"/>

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btnDelete"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="30dp"
                android:backgroundTint="@color/BBBlue"/>
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>