<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".itembb">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="10dp"
        >

        <TextView
            android:id="@+id/txtTeamName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/itemTeamName"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/txtTeamRoster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/itemTeamRoster"
            android:textAllCaps="false"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/txtBloodbowlStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/playStyle"
            android:textAllCaps="false"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/txtTeamValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtTeamValue"
            android:textColor="@color/black"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>